--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<header>
+ <div class="container">
+    <a href="#" routerLink="/" class="logo">TC Food Corner!</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="#" routerLink="/cart-page">Cart</a>
+            </li>
+        </ul>
+    </nav>
+ </div>
+</header>
