--- a/frontend/src/app/cart-page/cart-page.component.html
+++ b/frontend/src/app/cart-page/cart-page.component.html
@@ -1,1 +1,43 @@
-<p>cart-page works!</p>
+<app-not-found [visible]="!cart || cart.items.lenght <=0"
+notFoundMessage="No items found."
+resetLinkText="Go to Homepage"></app-not-found>
+<div *ngIf="cart && cart.items.lenght > 0" class="container">
+<ul>
+    <li  *ngFor="let cartItem of cart.items">
+        <div>
+        <img [src]="cartItem.food.imageurl" [alt]="cartItem.food.name">
+        </div>
+        <div>
+           <a routerLink="/food/{{cartItem.food.id}}">
+                {{cartItem.food.name}}
+           </a>
+        </div>
+        <div>
+            <select #quantitySelect (change)="changeQuantity(cartItem, quantitySelect.value">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+        </div>
+        <div>
+            {{cartItem.price | currency}}
+        </div>
+        <div>
+            <button class="remove-button" (click)="removeFromCart">
+                Remove
+            </button> 
+        </div>
+    </li>
+</ul>
+<div class="checkout">
+    <div>
+    <div class="foods-count">{{cart.items.lenght}}</div>
+    <div class="total-price">{{cart.totalPrice | curency}}</div>
+    </div>
+
+    <a routerlink="/checkout">Proceed to Checkout</a>
+</div>
+
+</div>
