--- a/frontend/src/app/search/search.component.html
+++ b/frontend/src/app/search/search.component.html
@@ -1,1 +1,5 @@
-<p>search works!</p>
+<div>
+    <input type="text" placeholder="search food from TC food corner"[
+    (ngMode1)]="searchItem" (change)="search()">
+    <button (click)="search()">search</button>
+</div>
