--- a/frontend/src/app/foodpage/foodpage.component.html
+++ b/frontend/src/app/foodpage/foodpage.component.html
@@ -1,1 +1,47 @@
-<p>foodpage works!</p>
+<div class="container">
+    <img [src]="food.imageUrl" alt="food.name">
+</div>
+<div class="details">
+    <div class="header">
+        <span class="name">
+            {{food.name}}
+        </span>
+        <span class="favorite {{food.favorite?:'':'not'}}">
+
+        </span>
+
+        
+    </div >
+
+</div class="star">
+     <star-rating [value]="food.star"
+      [totalstars]="5"
+      checkedcolor="red"
+      uncheckedcolor="black"
+      size="24px"
+      [readonly]="true">
+     </star-rating>
+</div>
+<div class="origins">
+    <span *ngFor="let origins of food.origins">
+        {{origin}}
+  
+    </span>
+</div>
+<div class="tag">
+    <app-tags [foodpageTags]="food.tags"> </app-tags>
+
+</div>
+<div class="cook-time">
+    <span>
+        time to cook about <strong>{{food.cookTime}}</strong>Minutes
+    </span>
+</div>
+<div class="price">
+    <span>
+        {{food.price| currency}}
+    </span>
+</div>
+<button>Add to cart</button>
+
+</div>
