--- a/frontend/src/app/tags/tags.component.html
+++ b/frontend/src/app/tags/tags.component.html
@@ -1,1 +1,7 @@
-<p>tags works!</p>
+
+
+
+<div *ngIf="foodpageTags">
+    <a *ngFor="let tagname of foodpageTags" routerLink="/tag/{{tagname}}"></a>
+
+</div>
