--- a/frontend/src/app/tags/tags.component.html
+++ b/frontend/src/app/tags/tags.component.html
@@ -1,1 +1,6 @@
-<p>tags works!</p>
+<div *ngIf="tags" [style.justifyContent]="justifyContent">
+    <a *ngFor="let tag of tags" routerLink = "/tag/{{tag.name}}">{{tag.name}}({{tag.count}})</a>
+</div>
+<div *ngIf="foodPageTags" [style.justifyContent]="justifyContent">
+    <a *ngIf="let tagname of foodPageTags" routerLink = "/tag//{{tagname.name}}">{{tagname}}</a>
+</div>
