home component and others

--- a/frontend/src/app/foodpage/foodpage.component.html
+++ b/frontend/src/app/foodpage/foodpage.component.html
@@ -1,1 +1,37 @@
-<p>foodpage works!</p>
+<!-- <app-not-found [visible]="!food" notFoundMessage="Product Not Found" resetLinkText=""Go to Homepage></app-not-found> -->
+
+<div *ngIf="food" class="container">
+    <img [src]="food.imageUrl" [alt]="food.name">
+</div>
+<div class="details">
+    <div class="header">
+        <span class="name">
+            {{food.name}}
+        </span>
+        <span class="favourite {{food.favourite?'':'not'}}">
+            ❤️
+        </span>
+    </div>
+    <div class="star">
+        
+    </div>
+    <div class="origins">
+        <span *ngFor="let origin of food.origins">
+            {{origin}}
+        </span>
+    </div>
+    <div class="tags">
+        <app-tags [foodPagetags]="food.tags" justifyContent="start"></app-tags>
+    </div>
+    <div class="cook-time">
+        <span>
+            Time to cook about<strong>{{food.cookTime}}</strong>Minutes
+        </span>
+    </div>
+    <div class="price">
+        <span>
+            {{food.price| currency:"INR"}}
+        </span>
+    </div>
+    <button (click)="addToCart()">Add to Cart</button>
+</div>
