--- a/frontend/src/app/cart-page/cart-page.component.html
+++ b/frontend/src/app/cart-page/cart-page.component.html
@@ -1,1 +1,39 @@
-<p>cart-page works!</p>
+<div class="container">
+    <ul>
+        <li *ngFor="let cartItem of cart.items">
+            <div><img [src]="cartItem.food.imageUrl" [alt]="cartItem.food.name">
+            </div>
+            <div>
+                <a routerLink="/food/{{cartItem.food.id}}">
+                    {{cartItem.food.name}}
+                </a>
+            </div>
+            <div>
+                <select #quantitySelect (change)="changeQuantity(cartItem, quantitySelect.value)">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                </select>
+            </div>
+            <div>
+                {{cartItem.price | currency:'INR'}}
+            </div>
+            <div>
+                <button class="remove-button" (click)="removeFromCart(cartItem)">
+                    Remove
+                </button>
+            </div>
+        </li>
+    </ul>
+    <div class="checkout">
+        <div class="food-count">
+            {{cart.items.length}}
+        </div>
+        <div class="total-price">
+            {{cart.totalPrice |currency:'INR'}}
+        </div>
+        <a routerLink="'/checkout">Proceed to Checkout</a>
+    </div>
+</div>
