--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,28 @@
-<p>home works!</p>
+<app-search></app-search>
+<app-tags></app-tags>
+
+<ul>
+    <li *ngFor="let food of foods">
+        <a routerLink="/food/{{food.id}}">
+        <img src="{{food.imageUrl}}" alt="food images">
+        <div class="content">
+            <div class="name">{{food.name}}</div>
+        </div>
+        <span class="favourite {{food.favourite?'':'not'}}">❤️</span>
+        <!-- <star-rating value="5" totalstars="5" checkedcolor="red" uncheckedcolor="black" [size]="'small'" [readOnly]="false"></star-rating>
+     -->
+     <div class="product-item-footer">
+        <div class="origins">
+            <span *ngFor="let origin of food.origins">{{origin}}</span>
+        </div>
+     <div class="cook-time">
+        <span>🕑</span>
+        {{food.cookTime}}
+     </div>
+    </div>
+     <div class="price">
+        {{food.price|currency:"INR"}}
+     </div>
+    </a>
+    </li>
+</ul>
