--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+*{
+    box-sizing: border-box;
+
+}
+
+html{
+    font-size: 16px;
+}
+body{
+    margin: 0;
+    font-family: Quicksand, sans-serif;
+    font-size: 18px;
+}
+
+a{
+    text-decoration: none;
+}
