--- a/frontend/src/app/cart-page/cart-page.component.css
+++ b/frontend/src/app/cart-page/cart-page.component.css
@@ -1,9 +1,5 @@
 .container{
-<<<<<<< HEAD
     display: flex;
-=======
-    display:flex;
->>>>>>> 69ddf2f63048a90cee5182dc255a816b8266b091
     flex-wrap: wrap;
     align-items: flex-start;
     margin: 1.5rem;
@@ -12,7 +8,6 @@ ul{
     display: flex;
     flex-direction: column;
     flex: 3 0;
-<<<<<<< HEAD
     border: 1px solid #ffbbbb;
     border-radius: 1rem;
     margin: .5rem;
@@ -35,32 +30,12 @@ ul li:last-child{
     border: none;
 }
 
-=======
-    border: 1px solid black;
-    border-radius: 1rem;
-    margin: 0.5rem;
-    padding: 0;
-    list-style-type: none;
-    justify-content: space-evenly;
-}
-ul li{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;
-    border-bottom: 1px solid;
-}
-ul li:last-child{
-    border: none;
-}
->>>>>>> 69ddf2f63048a90cee5182dc255a816b8266b091
 ul li img{
     height: 5rem;
     width: 5rem;
     border-radius: 100rem;
     object-fit: cover;
 }
-<<<<<<< HEAD
 
 ul li div{
     padding: 1 rem;
@@ -70,52 +45,29 @@ ul li div:not(:first-child){
     flex-basis: 18%;
 }
 
-=======
-ul li div{
-    padding: 1rem;
-}
-ul li div:not(first-child){
-    flex-basis: 18%;
-}
->>>>>>> 69ddf2f63048a90cee5182dc255a816b8266b091
 ul li select{
     width: 4rem;
     border: none;
     outline: none;
-<<<<<<< HEAD
     border-bottom: 1px solid salmon;
     font-weight: 100;
 }
 
-=======
-    border-bottom: 1px solid lightskyblue;
-    font-weight: 100;
-}
->>>>>>> 69ddf2f63048a90cee5182dc255a816b8266b091
 ul .remove-button{
     border-radius: 1rem;
     border: none;
     outline: none;
     padding: .5rem;
     opacity: .7;
-<<<<<<< HEAD
     color: #e72929;
 }
 
-=======
-}
-ul .remove-button:hover{
-    opacity: 1;
-    cursor: pointer;
-}
->>>>>>> 69ddf2f63048a90cee5182dc255a816b8266b091
 .checkout{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     flex: 1 3;
-<<<<<<< HEAD
     height: 20rem;
     border:1px solid #ffbbbb;
     border-radius: 1 rem;
@@ -124,14 +76,6 @@ ul .remove-button:hover{
     
 }
 
-=======
-    height: 20;
-    border: 1px solid;
-    border-radius: 1rem;
-    padding: .5rem;
-    margin: .5rem;
-}
->>>>>>> 69ddf2f63048a90cee5182dc255a816b8266b091
 .checkout>div{
     display: flex;
     flex: 3;
@@ -139,49 +83,18 @@ ul .remove-button:hover{
     align-items: flex-start;
     justify-content: center;
     margin: 1rem;
-<<<<<<< HEAD
     font-size: 1.4rem;
 }
 
-/* .checkout .foods-count{
+.checkout .foods-count{
     margin-bottom: 1.5rem;
 
 }
 .checkout .foods-count::before{
     content: 'Total Products';
 
-} */
+}
 .checkout .total-price::before{
     content: 'Total Price';
 
 }
-=======
-    font-size: 1.5rem;
-}
-.checkout .foods.count{
-    margin-bottom: 1.5rem;
-}
-.checkout .foods.count::before{
-    content: 'Total Products- ';
-    color: gray;
-}
-.checkout .total.price::before{
-    content: 'Total Price- ';
-    color: gray;
-}
-.checkout a{
-    padding: 1rem;
-    color: white;
-    background-color: #e72929;
-    display: block;
-    width: 99%;
-    border-radius: 1rem;
-    text-align: center;
-    opacity: .7;
-    justify-content: center;
-}
-.checkout a{
-    opacity: 1;
-    cursor: pointer;
-}
->>>>>>> 69ddf2f63048a90cee5182dc255a816b8266b091
