--- a/frontend/src/app/search/search.component.html
+++ b/frontend/src/app/search/search.component.html
@@ -1,5 +1,5 @@
 <div>
-    <input type="text" placeholder="Search Food from TC Food Corner"
+    <input type="text" placeholder="Search for Food"
      [(ngModel)]="searchItem" (change)="search()">
     <button (click)="search()">Search</button>
 </div>
