update header component html

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container">
-        <a href="#" routerLink="/" class="logo">Food Corner</a>
+        <a href="#" routerLink="/" class="logo">Hunger Planet </a>
         <nav>
             <ul>
                 <li>
