--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -367,7 +367,7 @@
     </div>
     <br><br> -->
     <div>
-   <button type="button"  onclick="gotohome()"  >  <a routerLink="/signup">Signup:)</a> </button>
+   <button type="button"  onclick="gotohome()"  >  <a routerLink="/login">Signup:)</a> </button>
     </div>
     </div>
 </div>
