--- a/frontend/src/app/cart-page/cart-page.component.html
+++ b/frontend/src/app/cart-page/cart-page.component.html
@@ -1,4 +1,8 @@
-<div class="container">
+<app-not-found [visible]="!cart || cart.items.length <=0"
+notFoundMessage="No items in Cart  !!..."
+resetLinkText="Go to HomePage!"
+></app-not-found>
+<div *ngIf="cart && cart.items.length > 0" class="container">
     <ul>
         <li *ngFor="let cartItem of cart.items">
             <div><img [src]="cartItem.food.imageUrl" [alt]="cartItem.food.name">
