change in cart page

--- a/frontend/src/app/cart-page/cart-page.component.css
+++ b/frontend/src/app/cart-page/cart-page.component.css
@@ -92,6 +92,7 @@ ul .remove-button{
 }
 .checkout .foods-count::before{
     content: 'Total Products';
+    color: grey;
 
 }
 .checkout .total-price::before{
